--- a/App/templates/App/login.html
+++ b/App/templates/App/login.html
@@ -18,11 +18,22 @@
     {% endif %}
 {% endif %}
 
+<style>
+    input{
+        text-align: center !important;
+        margin-left: 30px !important;
+        margin-right: auto !important;
+        margin-top: 0!important;
+        margin-bottom: 2% !important;
+    }
+    #notauser{
+        margin-left:100px !important;
+    }
+</style>
+
 <div class="container">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
-            <br>
-            <br>
             <br>
             <br>
             <br>
@@ -31,7 +42,7 @@
                     <p style="min-width:100%;"></p>
                 </div>
                 <div class="signin-form">
-                <div class="panel-title text-center" style="color:white; font-size: 1.5em">Please Sign In &nbsp;&nbsp; &nbsp;</div>
+                <div class="panel-title text-center" style="color:white; font-size: 1.5em">Sign In &nbsp;&nbsp;&nbsp;&nbsp;</div>
                 <br>
                     <form method="post" action="{% url 'login' %}">
                         {% csrf_token %}
@@ -50,10 +61,12 @@
                             <br/>
                         </div>
                         </div>
-                            <p style="color:white; font-size:1.1em">Not a User? &nbsp; &nbsp;&nbsp; <a href="{% url 'register' %}">Register</a></p>
                         <p class="bs-component">
+                            <p style="color:white;font-size:1.1em;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;Not a User? &nbsp; &nbsp;&nbsp; <a href="{% url 'register' %}"><u>Register</u></a></p>
+                        <br>
+                        <br>
                             <center>
-                                <input class="btn btn-success btn-sm" type="submit" value="Login" />
+                                <input class="btn btn-success btn-lg" type="submit" value="Login" />
                             </center>
                           
                             <br>
