--- a/App/templates/App/postQuestion.html
+++ b/App/templates/App/postQuestion.html
@@ -5,14 +5,13 @@
 
 <style>
  
-input,select,textarea{
+input,select{
     margin-bottom: 16px;
     margin-left: 30px;
 }
 textarea{
-    width:55%;
+    width:75%;
 }
-
 </style>
 
 <div class="container">
@@ -20,23 +19,15 @@ textarea{
         <div class="col-md-4 col-md-offset-4">
             <div class="login-panel panel panel-default">
                 <div class="panel-heading">
-                    <div class="panel-title text-center" style="color:black">Create Discussion</div>
+                    <div class="panel-title text-center" style="color:black">Post Question</div>
                 </div>
                 <div class="panel-body">
                     <form method="post" action="">
                         {% csrf_token %}
 						  <table>
                                 <tr>
-                                    <td>{{ form.heading.label_tag }}</td>
-                                    <td>{{ form.heading }}</td>
-                                </tr>
-                                <tr>
-                                    <td>{{ form.body.label_tag }}</td>
-                                    <td>{{ form.body }}</td>
-                                </tr>
-                                <tr>
-                                    <td>{{ form.link.label_tag }}</td>
-                                    <td>{{ form.link }}</td>
+                                    <td>{{ form.question.label_tag }}</td><br>
+                                    <td>{{ form.question }}</td>
                                 </tr>
                     		</table>
                                 <input class="btn btn-success btn-md pull-right" type="submit" value="Submit" />
